Fix for github issue #16
The CSS was causing the text bounding box to slightly overlap the
text. A kind person explained the problem by posting to issue 16.

However, his change didn't work. I removed the width field and for
some reason all the headings centered themselves. I tried changing
their alignment and that didn't work. I comprimised by changing 750
to 540 and that worked.

I also slightly changed the font size. It was almost comically large.

--- a/styles/custom2.css
+++ b/styles/custom2.css
@@ -89,9 +89,9 @@
     }
     div.text_cell_render{
         font-family: 'Arimo',verdana,arial,sans-serif;
-        line-height: 135%;
-        font-size: 125%;
-        width:750px;
+        line-height: 125%;
+        font-size: 120%;
+        width:740px;
         margin-left:auto;
         margin-right:auto;
         text-align:justify;
